Download zip archive, configure docker, change app.prop